# uploadergeek

./: .env.development  .env.production  .env.test  .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  dfx.json  eslint.config.cjs  jest.config.ts  jest.polyfill.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts  webpack.config.js
backend/canisters/governance/api/: Cargo.toml  can.did
backend/canisters/governance/api/src/: lib.rs
backend/canisters/governance/api/src/lifecycle/: init.rs
backend/canisters/governance/api/src/queries/: decode_candid_response.rs  encode_candid_args.rs  get_canistergeek_information.rs  get_geek_user_principals.rs  get_governance.rs  get_my_governance_participant.rs  get_proposal.rs  get_proposals.rs  mod.rs
backend/canisters/governance/api/src/types/: governance.rs  mod.rs  proposal.rs
backend/canisters/governance/api/src/updates/: add_new_proposal.rs  mod.rs  perform_proposal.rs  vote_for_proposal.rs
backend/canisters/governance/impl/: Cargo.toml
backend/canisters/governance/impl/src/: guards.rs  lib.rs  macros.rs  serializer.rs  time.rs
backend/canisters/governance/impl/src/lifecycle/: init.rs  post_upgrade.rs  pre_upgrade.rs
backend/canisters/governance/impl/src/model/: geek_users.rs  governance.rs  mod.rs  proposal.rs
backend/canisters/governance/impl/src/queries/: decode_candid_response.rs  encode_candid_args.rs  get_canistergeek_information.rs  get_geek_user_principals.rs  get_governance.rs  get_my_governance_participant.rs  get_proposal.rs  get_proposals.rs  http_request.rs  mod.rs
backend/canisters/governance/impl/src/state/: mod.rs
backend/canisters/governance/impl/src/updates/: add_new_proposal.rs  perform_proposal.rs  set_geek_user_principals.rs  update_canistergeek_information.rs  vote_for_proposal.rs
backend/canisters/uploader/api/: Cargo.toml  can.did
backend/canisters/uploader/api/src/: lib.rs  main.rs
backend/canisters/uploader/api/src/queries/: get_service_principals.rs  get_uploaded_wasm.rs  mod.rs
backend/canisters/uploader/api/src/types/: api.rs  grant.rs  mod.rs
backend/canisters/uploader/api/src/updates/: end_wasm_uploading.rs  get_canister_status.rs  install_wasm.rs  mod.rs  perform_call.rs  perform_operation.rs  put_wasm_chunk.rs  set_controllers.rs  set_geek_user_principals.rs  set_operation_grant.rs  set_service_principals.rs  start_wasm_uploading.rs  upload_wasm_chunk.rs
backend/canisters/uploader/client/: Cargo.toml
backend/canisters/uploader/client/src/: lib.rs  macros.rs
backend/canisters/uploader/client/src/operations/: agent.rs  management.rs  mod.rs  uploader.rs  wasm.rs
backend/canisters/uploader/impl/: Cargo.toml
backend/canisters/uploader/impl/src/: guards.rs  lib.rs  macros.rs  management.rs
backend/canisters/uploader/impl/src/lifecycle/: init.rs  mod.rs  post_upgrade.rs
backend/canisters/uploader/impl/src/model/: mod.rs
backend/canisters/uploader/impl/src/queries/: get_service_principals.rs
backend/canisters/uploader/impl/src/state/: mod.rs
backend/canisters/uploader/impl/src/updates/: end_wasm_uploading.rs  get_canister_status.rs  mod.rs  perform_call.rs  perform_operation.rs  set_controllers.rs  set_geek_user_principals.rs  set_operation_grant.rs  set_service_principals.rs  update_canistergeek_information.rs  upgrade_wasm.rs  upload_wasm_chunk.rs
backend/dev/internet_identity/: .gitignore
backend/generate_candid/: Cargo.toml
backend/generate_candid/governance/: Cargo.toml
backend/generate_candid/governance/src/: main.rs
backend/generate_candid/src/: main.rs
backend/generate_candid/uploader/: Cargo.toml
backend/libraries/candid_gen/: Cargo.toml
backend/libraries/canister_client/: Cargo.toml
backend/libraries/canister_client/src/: lib.rs
backend/libraries/canister_client/src/operations/: uploader.rs
backend/uploader/api/: Cargo.toml
backend/uploader/api/src/queries/: get_geek_user_principals.rs  get_service_principals.rs  get_uploaded_wasm.rs  mod.rs
backend/uploader/api/src/updates/: mod.rs  set_geek_user_principals.rs  set_service_principals.rs  update_canistergeek_information.rs  upgrade_wasm.rs
backend/uploader/client/: Cargo.toml
backend/uploader/client/src/: lib.rs  macros.rs
backend/uploader/client/src/operations/: agent.rs  management.rs  uploader.rs  wasm.rs
backend/uploader/impl/: Cargo.toml
backend/uploader/impl/releases/: uploader_canister_impl_0_1_0.wasm
backend/uploader/impl/src/: guards.rs  macros.rs  management.rs
backend/uploader/impl/src/lifecycle/: post_upgrade.rs  pre_upgrade.rs
backend/uploader/impl/src/model/: mod.rs
backend/uploader/impl/src/queries/: get_canistergeek_information.rs  get_geek_user_principals.rs  get_uploaded_wasm.rs  mod.rs
backend/uploader/impl/src/state/: mod.rs
backend/uploader/impl/src/updates/: end_wasm_uploading.rs  install_wasm.rs  put_wasm_chunk.rs  set_geek_user_principals.rs  set_service_principals.rs  start_wasm_uploading.rs  upgrade_wasm.rs
frontend/: .gitignore  index.html  jest.project.ts  package.json  tsconfig.base.json  tsconfig.dev.json  tsconfig.prod.json  tsconfig.test.json  vite.config.js
frontend/src/: .ic-assets.json5  constants.ts  i18.ts  index.html  index.jsx  index.less  index.tsx  vite-env.d.ts
frontend/src/components/: App.tsx  AppEntryPoint.tsx
frontend/src/context/: AppConfigProvider.tsx  DelegationExpirationLogger.tsx  LoginNotificationHandler.tsx
frontend/src/css/: alert.css  antd_overrides.css  colors.css  skeleton.css  typography.css  widget.css
frontend/src/hook/: useDefaultPaginationConfig.ts  usePageFocus.ts  useProgressivePolling.ts  useRedirectFromRaw.ts  useRemoteListWithUrlState.tsx  useUrlState.ts  useWindowSize.ts
frontend/src/ic/: ActorUtils.ts  canisters.ts
frontend/src/utils/: env.ts
releases/0_1_1/: uploader_canister.did  uploader_canister.wasm
releases/0_2_0/: uploader_canister.wasm
releases/governance/0_1_1/: governance_canister.did  governance_canister.wasm
releases/governance/1_0_1/: governance_canister.did  governance_canister.wasm
releases/uploader/2_0_0/: README.md  (+2 more)
(+213 files in other folders)
