[workspace]
resolver = "1"
members = [
    "backend/canisters/uploader/api",
    "backend/canisters/uploader/client",
    "backend/canisters/uploader/impl",
    "backend/generate_candid/uploader",
    "backend/canisters/governance/api",
    "backend/canisters/governance/impl",
    "backend/generate_candid/governance",
]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
