[workspace]
resolver = "1"
members = [
    "backend/canisters/uploader/api",
    "backend/canisters/uploader/client",
    "backend/canisters/uploader/impl",
    "backend/generate_candid/uploader",
    "backend/canisters/governance/api",
    "backend/canisters/governance/impl",
    "backend/generate_candid/governance",
]

[workspace.dependencies]
canistergeek_ic_rust = "0.4.3"
ic-agent = "0.38.2"
ic-utils = "0.38.2"
candid = "0.10.10"
#candid = { version = "0.10.10", features = ["all"] }
candid_parser = "0.1.4"
serde = "1.0.210"
serde_cbor = "0.11.2"
serde_json = "1.0.128"
rmp-serde = "1.2.0"
ic-cdk = "0.16.0"
ic-cdk-macros = "0.16.0"
sha2 = "0.10.8"
pem = "3.0.4"
ring = { version = "0.17.8", features = ["std"] }
k256 = "0.13.4"
dirs = "5.0.1"
include_dir = { version = "0.7", features = ["glob"] }
ic-http-certification = "3.0.2"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
