[workspace]
resolver = "1"
members = [
    "backend/canisters/uploader/api",
    "backend/canisters/uploader/client",
    "backend/canisters/uploader/impl",
    "backend/generate_candid/uploader",
    "backend/canisters/governance/api",
    "backend/canisters/governance/impl",
    "backend/generate_candid/governance",
]

[workspace.dependencies]
canistergeek_ic_rust = "0.4.3"
ic-agent = "0.38.2"
ic-utils = "0.38.2"
candid = "0.10.20"
candid_parser = "0.3.0"
serde = "1.0.228"
serde_cbor = "0.11.2"
serde_json = "1.0.149"
rmp-serde = "1.3.1"
ic-cdk = "0.19.0"
ic-cdk-macros = "0.19.0"
sha2 = "0.10.9"
pem = "3.0.6"
ring = { version = "0.17.14", features = ["std"] }
k256 = "0.13.4"
dirs = "6.0.0"
include_dir = { version = "0.7.4", features = ["glob"] }
ic-http-certification = "3.0.3"
hex = "0.4.3"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
