[package]
name = "generate_mgt_candid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
governance_canister = { path = "../../canisters/governance/api" }
icgeek_candid_gen = "0.1.2"
candid = "0.9.2"

