[package]
name = "uploader_canister"
version = "0.1.1"
edition = "2021"
description = "A tool for Internet Computer to install and upgrade big wasm module."
license = "MIT"
repository = "https://github.com/ruby-light/uploadergeek.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canistergeek_ic_rust = "0.3.1"
candid = "0.8.3"
serde = "1.0.146"
