[package]
name = "uploader_canister_impl"
version = "0.1.0"
edition = "2021"
description = "A tool for Internet Computer to install and upgrade big wasm module."
license = "MIT"
repository = "https://github.com/ruby-light/uploadergeek.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
uploader_canister = { path = "../api" }
candid = "0.8.3"
serde = "1.0.146"
rmp-serde = "1.1.0"
ic-cdk = "0.6.1"
ic-cdk-macros = "0.6.1"
sha2 = "0.10.6"

