[package]
name = "governance_canister"
version = "0.1.1"
edition = "2021"
description = "A governance for install and upgrade canister."
license = "MIT"
repository = "https://github.com/ruby-light/uploadergeek.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canistergeek_ic_rust = "0.4.1"
candid = "0.9.2"
serde = "1.0.146"

