[package]
name = "governance_canister_impl"
version = "1.0.0"
edition = "2021"
description = "A governance for install and upgrade canister."
license = "MIT"
repository = "https://github.com/ruby-light/uploadergeek.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
canistergeek_ic_rust = { workspace = true }
governance_canister = { path = "../api" }
uploader_canister = { path = "../../uploader/api" }
candid = { workspace = true }
candid_parser = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }

