[package]
name = "uploader_canister"
version = "1.0.0"
edition = "2021"
description = "A tool for Internet Computer to install and upgrade big wasm module."
license = "MIT"
repository = "https://github.com/ruby-light/uploadergeek.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canistergeek_ic_rust = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
