[package]
name = "uploader_canister_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uploader_canister = { path = "../api" }
canister_client_macros = { path = "../../../libraries/canister_client_macros", features = ["ingress"] }
candid = "0.8.3"
ic-agent = "0.22.0"
