[package]
name = "uploader_canister_client"
version = "0.1.4"
edition = "2021"
description = "A tool for Internet Computer to install and upgrade big wasm module."
license = "MIT"
repository = "https://github.com/ruby-light/uploadergeek.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uploader_canister = { path = "../api" }
candid = "0.9.2"
ic-agent = "0.25.0"
ic-utils = "0.25.0"
dirs = "5.0.1"
sha2 = "0.10.6"
pem = "3.0.1"
ring = { version = "0.16.11", features = ["std"] }
k256 = "0.13.1"

