[package]
name = "uploader_canister_client"
version = "1.0.0"
edition = "2021"
description = "A tool for Internet Computer to install and upgrade big wasm module."
license = "MIT"
repository = "https://github.com/ruby-light/uploadergeek.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uploader_canister = "0.2.0"
candid = { workspace = true }
ic-agent = { workspace = true }
ic-utils = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
pem = { workspace = true }
ring = { workspace = true }
k256 = { workspace = true }

