[package]
name = "uploader_canister_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
uploader_canister = { path = "../api" }
canister_state_macros = { path = "../../../libraries/canister_state_macros" }
canister_client_macros = { path = "../../../libraries/canister_client_macros" }
candid = "0.8.3"
serde = "1.0.146"
rmp-serde = "1.1.0"
ic-cdk = "0.6.1"
ic-cdk-macros = "0.6.1"
sha2 = "0.10.6"

