[package]
name = "uploader_canister_impl"
version = "0.1.1"
edition = "2021"
description = "A tool for Internet Computer to install and upgrade big wasm module."
license = "MIT"
repository = "https://github.com/ruby-light/uploadergeek.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
canistergeek_ic_rust = "0.4.1"
uploader_canister = { path = "../api" }
candid = "0.9.2"
serde = "1.0.146"
rmp-serde = "1.1.0"
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.1"
sha2 = "0.10.6"

