[package]
name = "uploader_canister_impl"
version = "1.0.0"
edition = "2021"
description = "A tool for Internet Computer to install and upgrade big wasm module."
license = "MIT"
repository = "https://github.com/ruby-light/uploadergeek.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
canistergeek_ic_rust = { workspace = true }
uploader_canister = { path = "../api" }
candid = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
sha2 = { workspace = true }

